force-app/main/default/objects/Quilometragem__c/Quilometragem__c.object-meta.xml
<CustomObject>
    <label>Quilometragem</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quilometragem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>