force-app/main/default/objects/Quilometragem__c/fields/Data_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicial__c</fullName>
    <label>Data Inicial</label>
    <type>Date</type>
</CustomField>