force-app/main/default/objects/Quilometragem__c/fields/Km_inicial__c.field-meta.xml
<CustomField>
    <fullName>Km_inicial__c</fullName>
    <label>Km inicial</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>