force-app/main/default/objects/Quilometragem__c/fields/Km_percorrido__c.field-meta.xml
<CustomField>
    <fullName>Km_percorrido__c</fullName>
    <formula>Km_final__c -  Km_inicial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Km percorrido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>