force-app/main/default/objects/Quilometragem__c/fields/Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo__c</fullName>
    <label>Veículo</label>
    <referenceTo>Manuten_o_Preventiva_da_Frota__c</referenceTo>
    <relationshipLabel>Quilometragem</relationshipLabel>
    <relationshipName>Quilometragem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>